@@ -19,6 +19,7 @@ class SentryRelease extends Command
      */
     protected $signature = 'sentry:release
                             {--release= : release version for sentry}
+                            {--store-release : store release version in .sentry-release file}
                             {--commit= : commit associated with this release}
                             {--environment= : sentry environment}';
 
@@ -81,7 +82,8 @@ class SentryRelease extends Command
         }
 
         $release = $this->option('release');
-        $commit = $this->option('commit') ?? (is_dir(__DIR__.'/../../../.git') ? trim(exec('git log --pretty="%H" -n1 HEAD')) : $this->option('release'));
+        $commit = $this->option('commit') ??
+                  (is_dir(__DIR__.'/../../../.git') ? trim(exec('git log --pretty="%H" -n1 HEAD')) : $this->option('release'));
 
         // Sentry update
         $this->commandExecutor->exec('Update sentry', $this->getSentryCli().' update');
@@ -93,11 +95,13 @@ class SentryRelease extends Command
         $this->execSentryCli('Associate commits with the release', 'releases set-commits '.$release.' --commit "'.config('sentry.repo').'@'.$commit.'"');
 
         // Create a deploy
-        $this->execSentryCli('Create a deploy', 'releases deploys '.$release.' new --env '.$this->option('environment').' --name '.$commit);
+        $this->execSentryCli('Create a deploy', 'releases deploys '.$release.' new --env '.$this->option('environment').' --name '.config('monica.app_version'));
 
-        // Set sentry release
-        $this->line('Store release in .sentry-release file', OutputInterface::VERBOSITY_VERBOSE);
-        file_put_contents(__DIR__.'/../../../.sentry-release', $this->option('release'));
+        if ($this->option('store-release')) {
+            // Set sentry release
+            $this->line('Store release in .sentry-release file', OutputInterface::VERBOSITY_VERBOSE);
+            file_put_contents(__DIR__.'/../../../.sentry-release', $this->option('release'));
+        }
     }
 
     private function check() : bool
@@ -134,7 +138,7 @@ class SentryRelease extends Command
     private function getSentryCli()
     {
         if (! file_exists($this->install_dir.'/'.self::SENTRY_CLI)) {
-            mkdir($this->install_dir);
+            mkdir($this->install_dir, 0777, true);
             $this->commandExecutor->exec('Downloading sentry-cli', 'curl -sL '.self::SENTRY_URL.' | INSTALL_DIR='.$this->install_dir.' bash');
         }
 
